# Bitcoin-Trading-Agent

./: .gitignore  .~lock.backtest_trade_log.csv#  API_SETUP_GUIDE.md  Bitcoin_Trading_Config_Template.xlsx  CLAUDE.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  QUICK_SETUP.md  btc_hourly_yahoo_binance_6mo.xlsx  complete_bitcoin_data.md  config.cfg  profile.pyspy  pyproject.toml  requirements.txt  temp_bitcoin_data.md  test_dependencies.py  work.md
.claude/: settings.local.json
.continue/prompts/: new-prompt.yaml
.github/instructions/: prompt_v1.md
Archive/: 01_data_analysis.ipynb  01_data_collection.ipynb  02_binance_trading_system.ipynb
notebooks/: 01_data_analysis.ipynb  01_data_collection.ipynb  01_data_collection.py  02_binance_trading_bot _v2.py  02_binance_trading_bot.ipynb  02_binance_trading_bot.py  02_binance_trading_system.ipynb  02_trading_system.ipynb  03_binance_bot_notifications.ipynb  03_bot_notifications.ipynb  03_bot_notifications.ipynb.backup  04_binance_live_dashboard.ipynb  04_live_dashboard.ipynb  complete_bitcoin_data.md  crawl4ai_test.py  data_collection.py  data_collection_modular.py  goose_code.py  goose_code_v2.py  output.md  system_prompts.txt  tempCodeRunnerFile.py  test.ipynb  usage_examples.py
notebooks/coinbase_code/: 02_trading_system.ipynb  04_live_dashboard.ipynb
notebooks/modules/: 03_trade_executor.py  04_strategy_manager.py  05_llm_decision.py  binance_trading_bot_07.py  config.cfg  config_manager.py  config_manager_02.py  (+12 more)
src/: __init__.py  config_manager.py  data_collector.py  notifications.py  trading_engine.py
