[tool.poetry]
name = "bitcoin-trading-agent"
version = "0.1.0"
description = "Automated Bitcoin trading agent with DCA and ATR strategies"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
crawl4ai = "^0.2.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
yfinance = "^0.2.0"
requests = "^2.28.0"
pywhatkit = "^5.4"
google-auth = "^2.16.0"
google-api-python-client = "^2.70.0"
groq = "^0.4.1"
python-dotenv = "^1.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
ta = "^0.10.0"
ccxt = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"